--- a/about-us/index.html
+++ b/about-us/index.html
@@ -175,13 +175,23 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/DenisP.jpg">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Denis_Profka.JPG">
                             <div class="card-body info">
                                 <h4 class="card-title">Denis Profka</h4>
                                 <p class="card-text">Assistant Chief of Fluids</p>
                             </div>
                         </div>
                     </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Youssef_Fahmy.JPG">
+                            <div class="card-body info">
+                                <h4 class="card-title">Youssef Fahmy</h4>
+                                <p class="card-text">Assistant Chief, High Voltage</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
                     <div class="col-sm-6 col-lg-4">
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Saul_Partida-min.JPG">
                             <div class="card-body info">
@@ -190,8 +200,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
                     <div class="col-sm-6 col-lg-4">
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Kat_Chen-min.JPG">
                             <div class="card-body info">
@@ -207,7 +215,9 @@
                                 <p class="card-text">VP, External Affairs</p>
                             </div>
                         </div>
-                    </div>
+                    </div>  
+                </div>
+                <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
                     <div class="col-sm-6 col-lg-4">
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Danielle_Cai-min.JPG">
                             <div class="card-body info">
@@ -216,8 +226,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
                     <div class="col-sm-6 col-lg-4">
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Matthew_Groll-min.JPG">
                             <div class="card-body info">
@@ -234,15 +242,19 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-lg-4" data-aos="fade">
+                   
+                </div>
+           <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
+                <div class="col-sm-6 col-lg-4" data-aos="fade">
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Sophia_Ladyzhets-min.JPG">
                             <div class="card-body info">
                                 <h4 class="card-title">Sophia Ladyzhets</h4>
                                 <p class="card-text">Social Chair</p>
                             </div>
                         </div>
-                    </div>
                 </div>
+           </div>
+    
                  <button class="btn btn-outline-dark text-black-50" style="margin-top: 30px" type="button" onclick="window.location.href = 'https://docs.google.com/document/d/1qtSutZgiMmXyMW8FwmeXft0TfNtKqwPFRBRjtU2p7Ik/edit?usp=sharing';"><a class="" href="https://docs.google.com/document/d/1qtSutZgiMmXyMW8FwmeXft0TfNtKqwPFRBRjtU2p7Ik/edit?usp=sharing" style="color: rgba(0,0,0,1);opacity: 1;">Our Constitution</a></button>
                   <button class="btn btn-outline-dark text-black-50" style="margin-top: 30px" type="button" onclick="window.location.href = 'https://docs.google.com/document/d/1JW7P3AnJqlKNdxfa4Hs2y4-sC18wKMizDVfpeS_t3Qs/edit?usp=sharing';"><a class="" href="https://docs.google.com/document/d/1JW7P3AnJqlKNdxfa4Hs2y4-sC18wKMizDVfpeS_t3Qs/edit?usp=sharing" style="color: rgba(0,0,0,1);opacity: 1;">Conduct Guidelines</a></button>
             </div>
